# kin9-0rz.._..apkutils

./: Makefile  README.md  pyproject.toml
examples/: manifest.py  youtube.py
src/apkutils/: apk.py
tests/: test_apk.py  test_apk_fake_pwd.py  test_arsc.py  test_benchmark.py  test_strings_refx.py  test_youtube.py
