[project]
name = "apkutils"
version = "1.5.4"
description = "一个APK解析库"
authors = [{ name = "kin9-0rz", email = "kin9-0rz@outlook.com" }]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Natural Language :: Chinese (Simplified)",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "Pygments>=2.12.0,<3.0.0",
  "beautifulsoup4>=4.10.0,<5.0.0",
  "click>=8.0.3,<9.0.0",
  "cryptography>=39.0.1",
  "lxml>=5.0.0",
  "pyelftools>=0.27,<0.28",
  "pyftype>=1.2.4,<2.0.0",
  "colorlog>=6.7.0,<7.0.0",
]
requires-python = ">=3.8"

[project.urls]
Repository = "https://gitee.com/kin9-0rz/apkutils"

[tool]

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.3.3", "pytest-benchmark>=4.0.0"]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/apkutils"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
